src/validation/tests/snapshots/rusty__validation__tests__enum_validation_test__enum_variants_mismatch.snap
---
source: src/validation/tests/enum_validation_test.rs
expression: diagnostics
---
note: Consider using enums rather than literal integers, i.e. `localState := Idle`
   ┌─ <internal>:18:31
   │
18 │                 localState := 0;
   │                               ^ Consider using enums rather than literal integers, i.e. `localState := Idle`

note: Consider using enums rather than literal integers, i.e. `localState := Working`
   ┌─ <internal>:19:31
   │
19 │                 localState := 100;
   │                               ^^^ Consider using enums rather than literal integers, i.e. `localState := Working`

note: Consider using enums rather than literal integers, i.e. `color := red`
   ┌─ <internal>:24:26
   │
24 │                 color := 0;
   │                          ^ Consider using enums rather than literal integers, i.e. `color := red`

note: Consider using enums rather than literal integers, i.e. `color := green`
   ┌─ <internal>:25:26
   │
25 │                 color := 1;
   │                          ^ Consider using enums rather than literal integers, i.e. `color := green`

note: Consider using enums rather than literal integers, i.e. `color := blue`
   ┌─ <internal>:26:26
   │
26 │                 color := 2;
   │                          ^ Consider using enums rather than literal integers, i.e. `color := blue`

note: Consider using enums of the same kind, i.e. `color := red`
   ┌─ <internal>:28:26
   │
28 │                 color := State.Idle;    // State.Idle == 0 == Color.Red
   │                          ^^^^^^^^^^ Consider using enums of the same kind, i.e. `color := red`

note: Consider using enums of the same kind, i.e. `localState := Idle`
   ┌─ <internal>:29:31
   │
29 │                 localState := red;      // Color.Red  == 0 == State.Idle
   │                               ^^^ Consider using enums of the same kind, i.e. `localState := Idle`

error: `99` is not a valid value for enum `(red := 0, green := 1, blue := 2)`
   ┌─ <internal>:38:26
   │
38 │                 color := 99;
   │                          ^^ `99` is not a valid value for enum `(red := 0, green := 1, blue := 2)`

note: Consider using enums rather than literal integers
   ┌─ <internal>:38:26
   │
38 │                 color := 99;
   │                          ^^ Consider using enums rather than literal integers

error: `State.Working` is not a valid value for enum `(red := 0, green := 1, blue := 2)`
   ┌─ <internal>:39:26
   │
39 │                 color := State.Working;
   │                          ^^^^^^^^^^^^^ `State.Working` is not a valid value for enum `(red := 0, green := 1, blue := 2)`

error: `invalidReferenceForEnum` is not a valid value for enum `(red := 0, green := 1, blue := 2)`
   ┌─ <internal>:40:26
   │
40 │                 color := invalidReferenceForEnum;
   │                          ^^^^^^^^^^^^^^^^^^^^^^^ `invalidReferenceForEnum` is not a valid value for enum `(red := 0, green := 1, blue := 2)`

note: Value of main.color is evaluated at run-time, can not verify if value is valid for enum `(red := 0, green := 1, blue := 2)`
   ┌─ <internal>:41:26
   │
41 │                 color := foo(); // Value of `foo()` unknown, might be outside of variants range
   │                          ^^^^^^ Value of main.color is evaluated at run-time, can not verify if value is valid for enum `(red := 0, green := 1, blue := 2)`

error: `99` is not a valid value for enum `State`
   ┌─ <internal>:43:31
   │
43 │                 localState := 99;
   │                               ^^ `99` is not a valid value for enum `State`

note: Consider using enums rather than literal integers
   ┌─ <internal>:43:31
   │
43 │                 localState := 99;
   │                               ^^ Consider using enums rather than literal integers

error: `green` is not a valid value for enum `State`
   ┌─ <internal>:44:31
   │
44 │                 localState := green;
   │                               ^^^^^ `green` is not a valid value for enum `State`

error: `blue` is not a valid value for enum `State`
   ┌─ <internal>:45:31
   │
45 │                 localState := blue;
   │                               ^^^^ `blue` is not a valid value for enum `State`

error: `invalidReferenceForEnum` is not a valid value for enum `State`
   ┌─ <internal>:46:31
   │
46 │                 localState := invalidReferenceForEnum;
   │                               ^^^^^^^^^^^^^^^^^^^^^^^ `invalidReferenceForEnum` is not a valid value for enum `State`


